<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="call_for_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>

    <string name="share_app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_address">NikolaiBhairava@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="messenger_success">"Делимся счастьем!"</string>
    <string name="no_messenger">У вас не установлен мессенджер:(\n\nУстановите любой мессенджер, чтобы поделиться нашим приложением.</string>


    <string name="no_email_client">У вас не установлен почтовый клиент:(\n\nУстановите любой почтовый клиент, чтобы написать в службу поддержки.</string>
    <string name="no_browser">У вас не установлен браузер:(\n\nУстановите любой браузер, чтобы прочитать пользовательское соглашение.</string>


</resources>