<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    tools:context=".MainActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:padding="@dimen/padding_16dp"
    >

    <TextView
        android:text="@string/app_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_22px"
        android:fontFamily="@font/ys_display_medium"
        android:paddingTop="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="22dp"
        android:layout_marginBottom="6dp"
        >

        <Button
            android:text="@string/search"
            app:icon="@drawable/search"
            style="@style/mainButton"
            android:id="@+id/button_search" />

        <Button
            android:text="@string/media_library"
            app:icon="@drawable/library"
            style="@style/mainButton"
            android:id="@+id/button_library"
            android:layout_marginTop="@dimen/space_between_buttons_8dp"
            />

        <Button
            android:text="@string/settings"
            app:icon="@drawable/settings"
            style="@style/mainButton"
            android:id="@+id/button_settings"
            android:layout_marginTop="@dimen/space_between_buttons_8dp"
            />

    </LinearLayout>

</LinearLayout>