<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/settings"
    tools:context=".SettingsActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/settings_back"

        android:background="?android:attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:src="@drawable/back"
            app:tint="?attr/colorOnSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingLeft="6dp"
            android:paddingRight="8dp"
            />

        <TextView
            android:text="@string/settings"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_22px"

            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        >

        <TextView
            android:text="@string/dark_theme"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16px"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="?attr/colorOnSecondary"
            android:padding="@dimen/activity_settings_padding_20dp"
            android:paddingStart="@dimen/activity_settings_padding_start_18dp"

            />

        <Switch
            tools:ignore="UseSwitchCompatOrMaterialXml"
            style="@style/settingsSwitch"


            >
        </Switch>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/share_app"
        style="@style/linearLayoutMenuSettings"
        >


        <TextView
            android:text="@string/share_app"
            style="@style/settingsText"

            />

        <ImageView
            android:src="@drawable/share"
            style="@style/settingsIcon"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_for_support"
        style="@style/linearLayoutMenuSettings"
        >

        <TextView
            android:text="@string/call_for_support"
            style="@style/settingsText"
            />

        <ImageView
            android:src="@drawable/support"
            style="@style/settingsIcon"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_of_use"
        style="@style/linearLayoutMenuSettings"
        >

        <TextView
            android:text="@string/terms_of_use"
            style="@style/settingsText"
            />

        <ImageView
            android:src="@drawable/arrow_forward"
            style="@style/settingsIcon"
            />

    </LinearLayout>


</LinearLayout>